# quadrotor-simulation

./: README.md  motors_enables_uav.sh  motors_enables_uav_swarm.sh  record_bag.sh  teleop_twist_uav_swarm.sh  xbox_360_uav.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionGoal.h  LandingActionResult.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  TakeoffGoal.h  TakeoffResult.h  (+4 more)
devel/lib/hector_compressed_map_transport/: map_to_image_node
hector_gazebo/: README.md
hector_quadrotor_opencv/: CMakeLists.txt  package.xml
hector_quadrotor_opencv/src/: opencv_example_node1.cpp  opencv_example_node2.cpp  opencv_example_node3.cpp
learn_quadrotor_trajectroy/: CMakeLists.txt  package.xml
learn_quadrotor_trajectroy/matlab-files/: file.csv
learn_quadrotor_trajectroy/scripts/: python-plots.py
learn_quadrotor_trajectroy/src/: datapoints.cpp  demonstrations.cpp  emInitilization.cpp  emInitilizationMlpack.cpp  gmm.cpp  gmr.cpp  learn_quadrotor_trajectory.cpp  mvn.cpp  testcsvclass.cpp
learn_uav_trajectory/: CMakeLists.txt
learn_uav_trajectory/matlab-files/: trajectoryAlignment.m
learn_uav_trajectory/pbd/: CMakeLists.txt
learn_uav_trajectory/src/: datapoints.cpp  emInitilization.cpp  emInitilizationMlpack.cpp  gmm.cpp  gmr.cpp  main.cpp  mvn.cpp
scripts/: motors_enables_uav_swarm.sh  xbox_360_uav.sh
(+128 files in other folders)
